--- a/index.html
+++ b/index.html
@@ -5,10 +5,183 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <link rel="stylesheet" href="./src/styles/styles.scss" />
         <title>Pokedex</title>
     </head>
     <body>
-        <div id="app"></div>
+        <header>
+            <div class="header__wrapper container">
+                <div class="row">
+                    <div class="header__logo col-3 col-right-2 col-sm-right-5">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            xml:space="preserve"
+                            id="Pokéball"
+                            x="0"
+                            y="0"
+                            style="enable-background: new 0 0 595.3 594.1"
+                            version="1.1"
+                            viewBox="0 0 595.3 594.1"
+                        >
+                            <style>
+                                .st0 {
+                                    fill: #fff;
+                                }
+                            </style>
+                            <g id="Pokéball_1_">
+                                <g id="Colours">
+                                    <path
+                                        id="Down"
+                                        d="M297.6 380.9c-40.4 0-74.1-28.6-82.1-66.6H81.1c9.5 110.5 102.2 197.2 215.1 197.2s205.7-86.7 215.1-197.2H379.7c-8 38.1-41.7 66.6-82.1 66.6z"
+                                        class="st0"
+                                    />
+                                    <path
+                                        id="Shadow_Down"
+                                        d="M345.6 505.9c89.6-21 157.7-97.7 165.7-191.6h-53c-5.3 85.2-50 157.4-112.7 191.6z"
+                                        style="fill: #dfdfdf"
+                                    />
+                                    <path
+                                        id="Center"
+                                        d="M347.1 297c-.1 0-.1 0 0 0-.1-6.1-1.2-11.9-3.2-17.3-7-18.8-25.1-32.1-46.3-32.1s-39.3 13.4-46.3 32.1c-2 5.4-3.1 11.2-3.1 17.3h.1c0 6.1 1.1 11.9 3.1 17.3 7 18.8 25.1 32.1 46.3 32.1 21.2 0 39.3-13.4 46.3-32.1 2-5.3 3.1-11.2 3.1-17.3z"
+                                        class="st0"
+                                    />
+                                    <path
+                                        id="Up"
+                                        d="M297.7 213.2c40.4 0 74.1 28.6 82.1 66.6h134.4C504.7 169.2 412 82.5 299 82.5S93.4 169.2 83.9 279.7h131.7c8-38 41.7-66.5 82.1-66.5z"
+                                        style="fill: #ff1c1c"
+                                    />
+                                    <path
+                                        id="Shadow_Up"
+                                        d="M458.3 279.7h55.8c-8.2-95.5-78.6-173.3-170.5-192.6 63.8 33.7 109.3 106.6 114.7 192.6z"
+                                        style="fill: #df1818"
+                                    />
+                                </g>
+                                <path
+                                    id="Line"
+                                    d="M299 82.5c113 0 205.7 86.7 215.1 197.2H379.7c-8-38-41.7-66.6-82.1-66.6-40.4 0-74.1 28.6-82.1 66.6H83.9C93.4 169.2 186.1 82.5 299 82.5zm44.9 197.2c2 5.4 3.1 11.2 3.1 17.3h.1c0 6.1-1.1 11.9-3.1 17.3-7 18.8-25.1 32.1-46.3 32.1-21.2 0-39.3-13.4-46.3-32.1-2-5.4-3.1-11.2-3.1-17.3h-.1c0-6.1 1.1-11.9 3.1-17.3 7-18.8 25.1-32.1 46.3-32.1s39.3 13.4 46.3 32.1zm-47.7 231.9c-113 0-205.7-86.7-215.1-197.2h134.4c8 38 41.7 66.6 82.1 66.6s74.1-28.6 82.1-66.6h131.7c-9.5 110.4-102.2 197.2-215.2 197.2zm1.4-470.3C156.4 41.3 41.9 155.8 41.9 297s114.5 255.7 255.7 255.7S553.4 438.3 553.4 297 438.9 41.3 297.6 41.3z"
+                                />
+                            </g>
+                        </svg>
+                    </div>
+
+                    <div
+                        class="header__search-trigger col-2 col-right-1 col-sm-1"
+                        data-component="search"
+                    >
+                        <button data-search-trigger class="header__search-trigger">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                id="Layer_1"
+                                width="800"
+                                height="800"
+                                data-name="Layer 1"
+                                viewBox="0 0 24 24"
+                            >
+                                <defs>
+                                    <style>
+                                        .cls-1 {
+                                            fill: none;
+                                            stroke: #020202;
+                                            stroke-miterlimit: 10;
+                                            stroke-width: 1.91px;
+                                        }
+                                    </style>
+                                </defs>
+                                <circle cx="9.14" cy="9.14" r="7.64" class="cls-1" />
+                                <path d="m22.5 22.5-8.11-8.11" class="cls-1" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div
+                        class="header__language-switch col-4 col-sm-2"
+                        data-component="language-switch"
+                    >
+                        <label>
+                            <input
+                                type="radio"
+                                name="language"
+                                value="en"
+                                data-language-switch="en"
+                            />
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="512"
+                                height="512"
+                                viewBox="0 0 512 512"
+                            >
+                                <mask id="a"><circle cx="256" cy="256" r="256" fill="#fff" /></mask>
+                                <g mask="url(#a)">
+                                    <path
+                                        fill="#eee"
+                                        d="m0 0 8 22-8 23v23l32 54-32 54v32l32 48-32 48v32l32 54-32 54v68l22-8 23 8h23l54-32 54 32h32l48-32 48 32h32l54-32 54 32h68l-8-22 8-23v-23l-32-54 32-54v-32l-32-48 32-48v-32l-32-54 32-54V0l-22 8-23-8h-23l-54 32-54-32h-32l-48 32-48-32h-32l-54 32L68 0H0z"
+                                    />
+                                    <path
+                                        fill="#0052b4"
+                                        d="M336 0v108L444 0Zm176 68L404 176h108zM0 176h108L0 68ZM68 0l108 108V0Zm108 512V404L68 512ZM0 444l108-108H0Zm512-108H404l108 108Zm-68 176L336 404v108z"
+                                    />
+                                    <path
+                                        fill="#d80027"
+                                        d="M0 0v45l131 131h45L0 0zm208 0v208H0v96h208v208h96V304h208v-96H304V0h-96zm259 0L336 131v45L512 0h-45zM176 336 0 512h45l131-131v-45zm160 0 176 176v-45L381 336h-45z"
+                                    />
+                                </g>
+                            </svg>
+                        </label>
+
+                        <label>
+                            <input
+                                type="radio"
+                                name="language"
+                                value="de"
+                                data-language-switch="de"
+                            />
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="512"
+                                height="512"
+                                viewBox="0 0 512 512"
+                            >
+                                <mask id="a"><circle cx="256" cy="256" r="256" fill="#fff" /></mask>
+                                <g mask="url(#a)">
+                                    <path fill="#ffda44" d="m0 345 256.7-25.5L512 345v167H0z" />
+                                    <path fill="#d80027" d="m0 167 255-23 257 23v178H0z" />
+                                    <path fill="#333" d="M0 0h512v167H0z" />
+                                </g>
+                            </svg>
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <section class="pokedex container">
+                <div class="row">
+                    <aside class="pokedex__filter col-12 col-xl-3" data-component="filter">
+                        <div></div>
+                    </aside>
+
+                    <div class="col-12 col-xl-9">
+                        <ul class="pokedex__list row" data-component="pokedex-list"></ul>
+
+                        <button class="pokedex__load-more">load more</button>
+                    </div>
+                </div>
+            </section>
+
+            <div class="search">
+                <input type="text" class="search__input" />
+
+                <button class="search__submit"></button>
+            </div>
+
+            <dialog class="pokemon-detail" data-component="pokemon-detail">
+                <div data-pokemon-detail-content></div>
+            </dialog>
+        </main>
+
+        <footer></footer>
+
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
